--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -47,5 +47,12 @@
         }
       }
     }
+  },
+  "function": {
+    "testFunction": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
   }
 }
