--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -53,6 +53,11 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "TestFunc": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   }
 }
