--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -48,16 +48,5 @@
       }
     }
   },
-  "function": {
-    "testFunction": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    },
-    "TestFunc": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    }
-  }
+  "function": {}
 }
