--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -66,27 +66,12 @@
     "testFunc": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "storage",
-          "resourceName": "restTestTable",
-          "attributes": [
-            "Name",
-            "Arn"
-          ],
-          "attributeEnvMap": {
-            "Name": "TABLE_NAME",
-            "Arn": "TABLE_ARN"
-          }
-        }
-      ]
-    }
-  },
-  "storage": {
-    "restTestTable": {
-      "service": "DynamoDB",
-      "providerPlugin": "awscloudformation"
+      "service": "Lambda"
+    },
+    "multiregionamplifye2360c60": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   }
 }
