test function for github migration

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -48,5 +48,12 @@
       "providerPlugin": "awscloudformation",
       "dependsOn": []
     }
+  },
+  "function": {
+    "multiregionamplify1bd3dbfa": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
   }
 }
