--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,8 @@
 {
-  "projectName": "multiregionamplify",
+  "providers": [
+    "awscloudformation"
+  ],
+  "projectName": "amplifyrepochangetes",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
@@ -10,8 +13,5 @@
       "BuildCommand": "npm run-script build",
       "StartCommand": "npm run-script start"
     }
-  },
-  "providers": [
-    "awscloudformation"
-  ]
+  }
 }
