Added a new function to test build

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -54,6 +54,11 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "amplifyrepochangetes1a2c65bf": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   }
 }
